# skyhook

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  AUTHORS  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md
.beads/: issues.jsonl
.github/workflows/: agent-ci.yaml  agent-container.yaml  agent-coverage.yaml  agentless-container.yaml  (+6 more)
agent/: .gitignore  CONTRIBUTING.md  Makefile  NOTICE  README.md  cmds.sh  hatch.toml  pyproject.toml
agent/skyhook-agent/: NOTICE  README.md  pyproject.toml
agent/skyhook-agent/src/skyhook_agent/: __about__.py  __init__.py  chroot_exec.py  config.py  controller.py  enums.py  interrupts.py  step.py
agent/skyhook-agent/src/skyhook_agent/schemas/v1/: skyhook-agent-schema.json  step-schema.json
agent/skyhook-agent/tests/: __init__.py  test_chroot_exec.py  test_config.py  test_controller.py  test_enums.py  test_interrupts.py  test_steps.py
chart/: Chart.yaml  README.md  values.yaml
containers/: agent.Dockerfile  ci.Dockerfile  operator.Dockerfile
demos/: debug_pod.yaml
docs/: README.md  cli.md  deployment_policy.md  interrupt_flow.md  kubernetes-support.md  operator-status-definitions.md  operator_resources_at_scale.md  ordering_of_skyhooks.md  providing_secrets_to_packages.md  release-process.md  resource_management.md  runtime_required.md  taints.md  versioning.md
examples/: README.md  debug_pod.yaml
k8s-tests/: readme.md
kyverno/: README.md  disable_packages.yaml  skyhook-viewer-binding.yaml
operator/: .gitignore  .golangci.yml  .goreleaser.yaml  .mockery.yaml  Makefile  NOTICE  PROJECT  README.md  deps.mk  go.mod  go.sum  license.yml  main.tf  monitor.sh  releases.md
plugin/: Makefile  go.mod  main.go
scripts/: find-skyhook-resources.sh  format_license.py  monitor.sh  scale_test.sh  scale_test_policy.yaml  scale_test_skyhook.yaml
(+562 files in other folders)
