[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "skyhook-agent"
dynamic = ["version"]
description = ''
readme = "README.md"
license = "Apache-2.0"
requires-python = ">= 3.10"
keywords = [
  "skyhook",
]
authors = [
  { name = "Alex Yuskauskas", email = "ayuskauskas@nvidia.com" },
  { name = "Brian Lockwood", email = "blockwood@nvidia.com" },
  { name = "Riley Rice", email = "rrice@nvidia.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10"
]
dependencies = [
  "jsonschema"
]

[project.urls]
Documentation = "https://gitlab-master.nvidia.com/dgx/infra/skyhook-agent#readme"
Issues = "https://gitlab-master.nvidia.com/dgx/infra/skyhook-agent/issues"
Source = "https://gitlab-master.nvidia.com/dgx/infra/skyhook-agent"

[project.scripts]
controller = "skyhook_agent.controller:cli"

[tool.hatch.version]
path = "src/skyhook_agent/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/skyhook_agent tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/skyhook_agent"]
include = [
    "schemas/*"
]

[tool.coverage.run]
source_pkgs = ["skyhook_agent", "tests"]
branch = true
parallel = true
omit = [
  "src/skyhook_agent/__about__.py",
  "tests/*",
  "__init__.py"
]

[tool.coverage.paths]
skyhook_agent = ["src/skyhook_agent", "*/skyhook-agent/src/skyhook_agent"]
tests = ["tests", "*/skyhook-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
